--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
             output.innerText = "Processing...";
 
             try {
-                const model = genAI.getGenerativeModel({ model: "gemini-2.0-pro-exp-02-05" });
+                const model = genAI.getGenerativeModel({ model: "gemini-2.0-flash" });
                 const chatSession = model.startChat({
                     generationConfig: {
                         temperature: 1,
                         topP: 0.95,
-                        topK: 64,
+                        topK: 40,
                         maxOutputTokens: 8192,
                         responseMimeType: "text/plain",
                     },
@@ -79,7 +79,7 @@
 
                 const language = languageSelect.value;
                 const isSame = language === "Same";
-                const result = await chatSession.sendMessage(`Get script using ${isSame ? 'the same language as the video' : (language + ' language')}.`);
+                const result = await chatSession.sendMessage(`get script. output only the script. do not add timestamps.`);
                 output.innerHTML = marked.parse(result.response.text());
             } catch (error) {
                 output.innerText = "An error occurred while processing the video.";
@@ -109,12 +109,12 @@
             output.innerText = "Processing...";
 
             try {
-                const model = genAI.getGenerativeModel({ model: "gemini-2.0-pro-exp-02-05" });
+                const model = genAI.getGenerativeModel({ model: "gemini-2.0-flash" });
                 const chatSession = model.startChat({
                     generationConfig: {
                         temperature: 1,
                         topP: 0.95,
-                        topK: 64,
+                        topK: 40,
                         maxOutputTokens: 8192,
                         responseMimeType: "text/plain",
                     },
